--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,5 @@
-
+eureka.instance.prefer-ip-address=true
+#By default true
+eureka.client.fetch-registry=true
+#by default true
+eureka.client.register-with-eureka=true
