--- a/application-prod.properties
+++ b/application-prod.properties
@@ -1,3 +1,15 @@
+
+spring.application.name=ACCOUNT-SERVICE
+server.port=8083
+spring.datasource.url= jdbc:oracle:thin:@localhost:1521/xe
+spring.datasource.username=system
+spring.datasource.password=a5e400076MH
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+
 eureka.instance.prefer-ip-address=true
 #By default true
 eureka.client.fetch-registry=true
